--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "axios": "^1.3.4",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "node-jose": "^2.0.0",
